--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wheather-forecast-app",
+  "name": "weather-forecast-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.4",
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
