--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,19 @@
     "document": false
   },
   "rules": {
+    "no-param-reassign": [
+      "error",
+      {
+        "props": true,
+        "ignorePropertyModificationsFor": [
+          "state"
+        ]
+      }
+    ],
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error"
+    ],
     "import/no-unresolved": 0,
     "react/jsx-filename-extension": [
       1,
