--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
+    "react-autosuggest": "^10.0.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
