--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
     "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-autosuggest": "^10.0.0",
